# ingest-csv-cpp

./: CMakeLists.txt  ingest_all.sh  main.cpp
config/: addressMapper.json  allschema.txt  app.config  personMapper.json  phoneCallMapper.json  phoneMapper.json
data/: recreatefd.sh
source-data/: latlongs.csv  phonecalls0.csv
src/: CMakeLists.txt  ClassAccessor.h  IngestCSV.cpp  IngestCSV.h  IngestMapper.cpp  IngestMapper.h  Makefile  SchemaManager.cpp  SchemaManager.h  cmake_install.cmake
src/utils/: CMakeLists.txt  ClassAccessor.cpp  ClassAccessor.h  CompositeKey.cpp  CompositeKey.h  Makefile  Property.h  Relationship.cpp  Relationship.h  SchemaManager.cpp  SchemaManager.h  SingleKey.cpp  SingleKey.h  TargetKey.h  TargetList.cpp  TargetList.h  cmake_install.cmake  option.cpp
src/utils/csv/: CSVFormat.h  CSVParser.h  CSVRecord.h  Lexer.h  error.h
